# thehivegames

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  run.py  startbedev.sh  startfedev.sh  staticasset-manifest.json
alembic/: env.py
alembic/versions/: 0657b36a1693_add_user_passphrase_constraint.py  43f5bded2454_lobby_id_and_user_constraint.py  b3d881873b39_remove_constraint.py  c731fac33c16_change_game_to_lobby_code.py  e4df6661e386_initial.py
frontend/: Dockerfile  nodemon-debug.json  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/lobby/: index.tsx  lobby.module.scss
frontend/src/components/secrethitler/: index.tsx  secrethitler.module.scss
frontend/src/components/template/: index.tsx  template.module.scss
scripts/: build.sh  startpg.sh
src/: databse.py  db.py  game_confs.py  main.py  routes.py
src/handlers/: home.py  lobby.py  users.py
src/handlers/utils/: game.py  lobby.py  users.py
src/secret_hitler/: elections.py  http_handler.py  night.py  policy.py  state.py
src/utils/: context.py  encodings.py  exceptions.py  roles.py  sql.py
static/: index.html
static/css/: 2.ccb38d5d.chunk.css  2.ccb38d5d.chunk.css.map  main.f738fdf8.chunk.css  main.f738fdf8.chunk.css.map
static/js/: 2.5ed0b268.chunk.js  2.5ed0b268.chunk.js.map  3.43485611.chunk.js  3.43485611.chunk.js.map  main.d735441f.chunk.js  main.d735441f.chunk.js.map  runtime-main.1fd3d498.js  runtime-main.1fd3d498.js.map
tests/: conftest.py  test_game.py  test_night.py  test_play.py
(+13 files in other folders)
