[tool.poetry]
name = "shbe"
version = "0.1.0"
description = ""
authors = ["Skyler Lewis <skyler@hivewire.co>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {version = "^0.13.4", extras = ["standard"]}
asyncpg = "^0.22.0"
SQLAlchemy = "^1.4.4"
alembic = "^1.5.8"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
psycopg2 = "^2.9.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
